--- a/projects/diaas-angular-cdk-hal/src/lib/dxc-autocomplete-hal/dxc-autocomplete-hal.component.html
+++ b/projects/diaas-angular-cdk-hal/src/lib/dxc-autocomplete-hal/dxc-autocomplete-hal.component.html
@@ -1,9 +1,9 @@
 <dxc-input-text
+  theme
   [prefix]="prefix"
   [suffix]="suffix"
   [prefixIconSrc]="prefixIconSrc"
   [suffixIconSrc]="suffixIconSrc"
-  [theme]="theme"
   [disabled]="disabled"
   [required]="required"
   [invalid]="invalid"
